--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:background="@android:color/holo_blue_bright"
         android:orientation="vertical">
 
@@ -16,6 +17,7 @@
             android:layout_width="351dp"
             android:layout_height="354dp"
             android:layout_marginLeft="10dp"
+            android:layout_gravity="center"
             android:text="@string/mensajeBienvenida"
             android:textAlignment="center"
             android:textColor="@android:color/white"
@@ -26,6 +28,7 @@
             app:layout_constraintVertical_bias="0.027" />
 
         <Button
+            android:layout_gravity="center"
             android:id="@+id/consultar"
             android:layout_width="210dp"
             android:layout_height="wrap_content"
